{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 101,
  "lineage": "7733c12f-ebff-4c14-a3c0-12bcfadab79c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426373171639:security-group/sg-0afd5538d40a4a909",
            "description": "Allow inbound Postgres traffic from trusted sources",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.11.0/24",
                  "10.0.10.0/24"
                ],
                "description": "Allow outbound traffic to private subnet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afd5538d40a4a909",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24",
                  "10.0.11.0/24"
                ],
                "description": "Allow inbound Postgres traffic from trusted sources",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dev-rds-sg",
            "name_prefix": "",
            "owner_id": "426373171639",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-rds-sg",
              "Project": "POC-GYM-LOG-APP"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-rds-sg",
              "Project": "POC-GYM-LOG-APP"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e97f606a9922340"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_outbound_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426373171639:security-group-rule/sgr-04bd0ecaf78e5755a",
            "cidr_ipv4": "10.0.10.0/24",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic to private subnet",
            "from_port": 0,
            "id": "sgr-04bd0ecaf78e5755a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0afd5538d40a4a909",
            "security_group_rule_id": "sgr-04bd0ecaf78e5755a",
            "tags": {
              "Environment": "dev",
              "Name": "dev-rds-sg-egress",
              "Project": "POC-GYM-LOG-APP"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-rds-sg-egress",
              "Project": "POC-GYM-LOG-APP"
            },
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_outbound_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426373171639:security-group-rule/sgr-05e763c2c51c2a098",
            "cidr_ipv4": "10.0.11.0/24",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic to private subnet",
            "from_port": 0,
            "id": "sgr-05e763c2c51c2a098",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0afd5538d40a4a909",
            "security_group_rule_id": "sgr-05e763c2c51c2a098",
            "tags": {
              "Environment": "dev",
              "Name": "dev-rds-sg-egress",
              "Project": "POC-GYM-LOG-APP"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-rds-sg-egress",
              "Project": "POC-GYM-LOG-APP"
            },
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_inbound_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426373171639:security-group-rule/sgr-00094ca19b4c6b837",
            "cidr_ipv4": "10.0.10.0/24",
            "cidr_ipv6": null,
            "description": "Allow inbound Postgres traffic from trusted sources",
            "from_port": 5432,
            "id": "sgr-00094ca19b4c6b837",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0afd5538d40a4a909",
            "security_group_rule_id": "sgr-00094ca19b4c6b837",
            "tags": {
              "Environment": "dev",
              "Name": "dev-rds-sg-ingress",
              "Project": "POC-GYM-LOG-APP"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-rds-sg-ingress",
              "Project": "POC-GYM-LOG-APP"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_inbound_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426373171639:security-group-rule/sgr-05a43e17df5778571",
            "cidr_ipv4": "10.0.11.0/24",
            "cidr_ipv6": null,
            "description": "Allow inbound Postgres traffic from trusted sources",
            "from_port": 5432,
            "id": "sgr-05a43e17df5778571",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0afd5538d40a4a909",
            "security_group_rule_id": "sgr-05a43e17df5778571",
            "tags": {
              "Environment": "dev",
              "Name": "dev-rds-sg-ingress",
              "Project": "POC-GYM-LOG-APP"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-rds-sg-ingress",
              "Project": "POC-GYM-LOG-APP"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0577f4a56faa5fc2f",
            "arn": "arn:aws:ec2:us-east-1:426373171639:elastic-ip/eipalloc-0577f4a56faa5fc2f",
            "association_id": "eipassoc-04bf57515a630fb34",
            "domain": "vpc",
            "id": "eipalloc-0577f4a56faa5fc2f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0466db053014dac86",
            "private_dns": "ip-10-0-1-223.ec2.internal",
            "private_ip": "10.0.1.223",
            "public_dns": "ec2-52-86-203-210.compute-1.amazonaws.com",
            "public_ip": "52.86.203.210",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426373171639:internet-gateway/igw-097475cfd32657143",
            "id": "igw-097475cfd32657143",
            "owner_id": "426373171639",
            "tags": {
              "Name": "gym-app-dev-igw",
              "Project": "POC-GYM-LOG-APP"
            },
            "tags_all": {
              "Name": "gym-app-dev-igw",
              "Project": "POC-GYM-LOG-APP"
            },
            "vpc_id": "vpc-06e97f606a9922340"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0577f4a56faa5fc2f",
            "association_id": "eipassoc-04bf57515a630fb34",
            "connectivity_type": "public",
            "id": "nat-019e78b3c15661cae",
            "network_interface_id": "eni-0466db053014dac86",
            "private_ip": "10.0.1.223",
            "public_ip": "52.86.203.210",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00f596c9c58f13980",
            "tags": {
              "Name": "gym-app-dev-nat",
              "Project": "POC-GYM-LOG-APP"
            },
            "tags_all": {
              "Name": "gym-app-dev-nat",
              "Project": "POC-GYM-LOG-APP"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f2dd0de0d9a24c8c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-019e78b3c15661cae",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f2dd0de0d9a24c8c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-097475cfd32657143",
            "id": "r-rtb-026d1c0f1943613621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-026d1c0f194361362",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426373171639:route-table/rtb-0f2dd0de0d9a24c8c",
            "id": "rtb-0f2dd0de0d9a24c8c",
            "owner_id": "426373171639",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-019e78b3c15661cae",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gym-app-dev-private-rt",
              "Project": "POC-GYM-LOG-APP"
            },
            "tags_all": {
              "Name": "gym-app-dev-private-rt",
              "Project": "POC-GYM-LOG-APP"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e97f606a9922340"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426373171639:route-table/rtb-026d1c0f194361362",
            "id": "rtb-026d1c0f194361362",
            "owner_id": "426373171639",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097475cfd32657143",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gym-app-dev-public-rt",
              "Project": "POC-GYM-LOG-APP"
            },
            "tags_all": {
              "Name": "gym-app-dev-public-rt",
              "Project": "POC-GYM-LOG-APP"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e97f606a9922340"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031f245512b472910",
            "route_table_id": "rtb-0f2dd0de0d9a24c8c",
            "subnet_id": "subnet-00fb2d0a7c500218b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073f4139f426678be",
            "route_table_id": "rtb-0f2dd0de0d9a24c8c",
            "subnet_id": "subnet-06c46ac3b7dd8eef2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05489ad8c5294302e",
            "route_table_id": "rtb-026d1c0f194361362",
            "subnet_id": "subnet-00f596c9c58f13980"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a5fafe38b376780",
            "route_table_id": "rtb-026d1c0f194361362",
            "subnet_id": "subnet-035858a6e1df924c3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426373171639:subnet/subnet-00fb2d0a7c500218b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fb2d0a7c500218b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "426373171639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gym-app-dev-private-0",
              "Project": "POC-GYM-LOG-APP"
            },
            "tags_all": {
              "Name": "gym-app-dev-private-0",
              "Project": "POC-GYM-LOG-APP"
            },
            "vpc_id": "vpc-06e97f606a9922340"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426373171639:subnet/subnet-06c46ac3b7dd8eef2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c46ac3b7dd8eef2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "426373171639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gym-app-dev-private-1",
              "Project": "POC-GYM-LOG-APP"
            },
            "tags_all": {
              "Name": "gym-app-dev-private-1",
              "Project": "POC-GYM-LOG-APP"
            },
            "vpc_id": "vpc-06e97f606a9922340"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426373171639:subnet/subnet-00f596c9c58f13980",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f596c9c58f13980",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "426373171639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gym-app-dev-public-0",
              "Project": "POC-GYM-LOG-APP"
            },
            "tags_all": {
              "Name": "gym-app-dev-public-0",
              "Project": "POC-GYM-LOG-APP"
            },
            "vpc_id": "vpc-06e97f606a9922340"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426373171639:subnet/subnet-035858a6e1df924c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035858a6e1df924c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "426373171639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gym-app-dev-public-1",
              "Project": "POC-GYM-LOG-APP"
            },
            "tags_all": {
              "Name": "gym-app-dev-public-1",
              "Project": "POC-GYM-LOG-APP"
            },
            "vpc_id": "vpc-06e97f606a9922340"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426373171639:vpc/vpc-06e97f606a9922340",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0ea5a2fe3585656e3",
            "default_route_table_id": "rtb-0f2dcd250bed766ad",
            "default_security_group_id": "sg-0caf184fde7700ab6",
            "dhcp_options_id": "dopt-6569921e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e97f606a9922340",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2dcd250bed766ad",
            "owner_id": "426373171639",
            "tags": {
              "Name": "gym-app-dev-vpc",
              "Project": "POC-GYM-LOG-APP"
            },
            "tags_all": {
              "Name": "gym-app-dev-vpc",
              "Project": "POC-GYM-LOG-APP"
            }
          }
        }
      ]
    }
  ]
}